# potterscript

./: Cargo.toml  LICENSE  README.md  input.potter
example/: Cargo.toml  input.potter
example/src/: main.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
playground/: components.json  next.config.js  package.json  pnpm-lock.yaml  vite.config.ts
playground/app/: globals.css  layout.tsx  page.tsx
playground/components/: console-alert.tsx  github-button.tsx  header.tsx  mode-toggle.tsx  playground.tsx
playground/hooks/: use-potterscript.ts
playground/src/: App.tsx
ron/: Cargo.toml
ron/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: interpreter.rs  main.rs  parser.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/tests/: web.rs
