[workspace]
members = [
  "parser",
  "interpreter",
  "example",
  "ron"
]
exclude = [
  "playground",
  "wasm"
]

[workspace.package]
description = "The Wizarding World Programming Language"
authors = ["Federico Miras <miras.federico@gmail.com>"]
repository = "https://github.com/fmiras/potterscript"
version = "0.1.0"
edition = "2021"
license = "MIT"