[package]
name = "potterscript-parser"
description = "PotterScript parser."
license = "MIT"
version.workspace = true
edition.workspace = true
repository = "https://github.com/fmiras/potterscript"

[dependencies]
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.105"

