[package]
name = "potterscript-runtime"
description = "PotterScript Runtime."
license = "MIT"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["colored", "rand"]

[dependencies]
potterscript-parser = { path = "../parser" }
colored = { version = "1.1.0", optional = true }
rand = { version = "0.8.4", optional = true }
