[package]
name = "potterscript-wasm"
version = "0.2.3"
authors = ["Federico Miras <miras.federico@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
potterscript-parser = { version = "0.2.0", path = "../parser" }
potterscript-runtime = { version = "0.2.0", path = "../runtime", default-features = false }
serde_json = "1.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
